@@ -63,8 +63,7 @@ static void select_event_wait(void)
 	err = socket_errno;
 	DEBUG(2, "select returns %d, socket_errno=%d", n, err);
         if (n < 0 && err != EINTR) {
-                perror("select");
-                error("Error on select");
+                error("Error on select: %s", strerror(errno));
         }
 }
 
